--- a/tests/ooo.html
+++ b/tests/ooo.html
@@ -1,7 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="utf-8">
   <title>.ooo explorer</title>
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="theme-color" content="#38b97d">
+  <meta name="description" content="explore the wonders of pure o sites">
+  <meta property="og:title" content=".ooo explorer">
+  <meta property="og:description" content="ooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="https://spax.zone/images/misc/o/o.png" type="image/png">
+  <link rel="icon" href="/images/misc/o/o.ico">
   <style>
     html, body {
       margin: 0;
@@ -9,6 +20,11 @@
       overflow: hidden;
     }
     body {
+      background-image: url("./../images/misc/o/o.png");
+      background-repeat: repeat;
+      background-size: 100px;
+      background-position: center;
+      background-blend-mode: soft-light;
       margin-top: 30px;
       background-color: #38b97d;
       display: flex;
