ooo fix (closes #55)

--- a/tests/ooo.html
+++ b/tests/ooo.html
@@ -107,7 +107,7 @@ const last = () => {
   if (notables.checked)
     o(validooos[mod(Math.ceil(index)-1,validooos.length)]);
   else
-    o(mod(get(), 63)-1);
+    o(mod(get()-2, 63)+1);
 };
 
 const next = () => {
