thing for chitter.xyz

--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
     <article who="claire" emotion="neutral">
       Redircting nerds...
     </article>
+    <a rel="me" style="display: none;" href="https://chitter.xyz/@spax">Mastodon</a>
   </body>
 </html>
