--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="theme-color" content="#306850">
+    <link rel="me" href="https://chitter.xyz/@spax"></link>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="keywords" content="Spax, SpiritAxolotl, spiritaxolotl, spirit, axolotl, axolotls, youtube">
     <meta property="og:title" content="spax.zone">
@@ -20,6 +21,5 @@
     <article who="claire" emotion="neutral">
       Redircting nerds...
     </article>
-    <a rel="me" style="display: none;" href="https://chitter.xyz/@spax">Mastodon</a>
   </body>
 </html>
