forgot to change the title whoops

--- a/tests/animal-gender-bodypart/index.html
+++ b/tests/animal-gender-bodypart/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Tumblr Username Generator</title>
+  <title>Tumblr-to-Cohost Username Generator</title>
   <script src="./agbplist.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap" rel="stylesheet">
   <style>
