--- a/tests/animal-gender-bodypart/index.html
+++ b/tests/animal-gender-bodypart/index.html
@@ -122,7 +122,9 @@
   <div id="footer">
     inspired by <a href="https://cohost.org/bethposting/post/6065965-cohost-users-who-cam">this</a> chost
     <br>
-    v1.0
+    made by <a href="https://cohost.org/Spax">@Spax</a>
+    <br>
+    v1.1
   </div>
   <script>
     const button = document.querySelector(`#the-button`);
