damnit wrong commit. oh well

--- a/tests/animal-gender-bodypart/index.html
+++ b/tests/animal-gender-bodypart/index.html
@@ -120,9 +120,9 @@
   <button id="the-button" onclick="spin()"><div>Spin!</div></button>
   <div id="username"><span id="at">@</span><span id="animal"></span><span id="gender"></span><span id="part"></span></div>
   <div id="footer">
-    inspired by <a href="https://cohost.org/bethposting/post/6065965-cohost-users-who-cam">this</a> chost
+    inspired by <a href="https://cohost.org/bethposting/post/6065965-cohost-users-who-cam" target="_blank">this</a> chost
     <br>
-    made by <a href="https://cohost.org/Spax">@Spax</a>
+    made by <a href="https://cohost.org/Spax" target="_blank">@Spax</a>
     <br>
     v1.1
   </div>
