--- a/tests/animal-gender-bodypart/index.html
+++ b/tests/animal-gender-bodypart/index.html
@@ -3,117 +3,8 @@
 <head>
   <title>Tumblr-to-Cohost Username Generator</title>
   <script src="./agbplist.js"></script>
+  <link rel="stylesheet" href="./styles.css" type=text/css>
   <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap" rel="stylesheet">
-  <style>
-    :root {
-      --desaturated-yellow: rgb(35, 35, 0);
-      --desaturated-red: rgb(34, 0, 0);
-    }
-    html {
-      background-color: var(--desaturated-red);
-    }
-    html, body {
-      margin: 0;
-      color: white;
-    }
-    * {
-      box-sizing: border-box;
-      font-family: Lexend;
-    }
-    body {
-      width: 100vw;
-      height: 100vh;
-      overflow: hidden;
-      display: flex;
-      align-items: center;
-      /* justify-content: center; */
-      flex-direction: column;
-      background-image:
-        linear-gradient(45deg, var(--desaturated-yellow) 25%, transparent 25%),
-        linear-gradient(-45deg, var(--desaturated-yellow) 25%, transparent 25%),
-        linear-gradient(45deg, transparent 75%, var(--desaturated-yellow) 75%),
-        linear-gradient(-45deg, transparent 75%, var(--desaturated-yellow) 75%);
-      background-size: 20px 20px;
-      background-position: 0 0, 0 10px, 10px -10px, -10px 0px;
-    }
-    button {
-      cursor: pointer;
-    }
-    h1 {
-      margin-top: 5rem;
-      font-size: 3rem;
-    }
-    #the-button {
-      background: none;
-      border: none;
-      font-size: 2rem;
-      font-family: inherit;
-      cursor: pointer;
-      & > div {
-        border: 0.075em solid white;
-        color: white;
-        border-radius: 0.2rem;
-        background-color: black;
-        padding: 0.5em 1rem;
-        pointer-events: none;
-        transition: transform 0.15s ease, background-color 0.1s ease;
-      }
-      &:hover > div {
-        background-color: #111;
-        transform: scale(0.96);
-      }
-      &:active > div {
-        background-color: #333;
-        transform: scale(0.94);
-      }
-      &:disabled > div {
-        background-color: black;
-        transform: scale(1);
-      }
-    }
-    #username {
-      visibility: hidden;
-      margin-top: 2rem;
-      font-size: 2rem;
-      & > span {
-        opacity: 0;
-        display: inline-block;
-        transition: transform, opacity;
-        transition-duration: 0.5s;
-        transition-timing-function: ease-in;
-        &:not(#at) {
-          transform: translateY(-2rem);
-        }
-        &#at {
-          transform: translateX(-2rem);
-          transition-delay: 0.75s;
-        }
-        &#gender {
-          transition-delay: 0.25s;
-        }
-        &#part {
-          transition-delay: 0.5s;
-        }
-      }
-    }
-    .slide {
-      transition: inherit;
-      transform: translateX(0rem) translateY(0rem) !important;
-    }
-    .stop {
-      transform: translateX(0rem) translateY(0rem) !important;
-    }
-    #footer {
-      position: absolute;
-      text-align: center;
-      color: gray;
-      bottom: 0;
-      margin: 2% auto;
-      & > a {
-        color: gray;
-      }
-    }
-  </style>
 </head>
 <body>
   <h1>Tumblr-to-Cohost Username Generator</h1>
@@ -124,7 +15,7 @@
     <br>
     made by <a href="https://cohost.org/Spax" target="_blank">@Spax</a>
     <br>
-    v1.1
+    v1.2
   </div>
   <script>
     const button = document.querySelector(`#the-button`);
@@ -152,12 +43,9 @@
       const elements = [animalspan, genderspan, partspan, atspan];
       elements.forEach(e => {
         button.disabled = true;
-        e.classList.remove("stop");
         e.classList.add("slide");
         e.style.opacity = 1;
         setTimeout(() => {
-          e.classList.remove("slide");
-          e.classList.add("stop");
           button.disabled = false;
         }, 1250);
       });
