animal list update with better regex (and more crediting)

--- a/tests/animal-gender-bodypart/index.html
+++ b/tests/animal-gender-bodypart/index.html
@@ -18,7 +18,7 @@
     <br>
     made by <a href="https://cohost.org/Spax" target="_blank">@Spax</a>
     <br>
-    v1.3
+    <a href="https://github.com/SpiritAxolotl/spax.zone/blob/main/tests/animal-gender-bodypart/">v1.3.1</a>
   </div>
   <script>
     const button = document.querySelector(`#spin-button`);
