--- a/tests/animal-gender-bodypart/index.html
+++ b/tests/animal-gender-bodypart/index.html
@@ -18,7 +18,9 @@
     <br>
     made by <a href="https://cohost.org/Spax" target="_blank">@Spax</a>
     <br>
-    <a href="https://github.com/SpiritAxolotl/spax.zone/blob/main/tests/animal-gender-bodypart/">v1.4</a>
+    tag <a class="tag" href="https://cohost.org/rc/tagged/animal%20gender%20bodypart" target="_blank">#animal gender bodypart</a> when sharing!
+    <br>
+    <a href="https://github.com/SpiritAxolotl/spax.zone/blob/main/tests/animal-gender-bodypart/">v1.5</a>
   </div>
   <script>
     const button = document.querySelector(`#spin-button`);
