--- a/tests/animal-gender-bodypart/index.html
+++ b/tests/animal-gender-bodypart/index.html
@@ -6,7 +6,7 @@
   <script src="./agbplist.js"></script>
 </head>
 <body>
-  <h1>Tumblr-to-Cohost Username Generator</h1>
+  <h1 id="title">Tumblr-to-Cohost Username Generator</h1>
   <button id="spin-button" onclick="spin()"><div>Spin!</div></button>
   <div id="username"><span id="at">@</span><span id="animal"></span><span class="separator"></span><span id="gender"></span><span class="separator"></span><span id="bodypart"></span></div>
   <div id="optionscontainer">
