--- a/tests/animal-gender-bodypart/index.html
+++ b/tests/animal-gender-bodypart/index.html
@@ -4,6 +4,7 @@
   <title>Tumblr-to-Cohost Username Generator</title>
   <link rel="stylesheet" href="./styles.css" type=text/css>
   <script src="./agbplist.js"></script>
+  <script src="./script.js" defer></script>
 </head>
 <body>
   <h1 id="title">Tumblr-to-Cohost Username Generator</h1>
@@ -28,124 +29,5 @@
     <br>
     <a href="https://github.com/SpiritAxolotl/spax.zone/blob/main/tests/animal-gender-bodypart/">v1.6</a>
   </div>
-  <script>
-    const button = document.querySelector(`#spin-button`);
-    const animalspan = document.querySelector(`#animal`);
-    const genderspan = document.querySelector(`#gender`);
-    const partspan = document.querySelector(`#bodypart`);
-    const atspan = document.querySelector(`#at`);
-    const username = document.querySelector(`#username`);
-    const separatorbutton = document.querySelector(`#separator-button`);
-    const separatecomponentsbutton = document.querySelector(`#separatecomponents-button`);
-    const separatorspans = Array.from(document.querySelectorAll(`.separator`));
-    const separators = [
-      {
-        name: "Dash",
-        char: "-"
-      },
-      {
-        name: "Underscore",
-        char: "_"
-      },
-      {
-        name: "Space",
-        char: " "
-      },
-      {
-        name: "Nothing",
-        char: ""
-      }
-    ];
-    const defaultseparator = separators[0].char; //dash by default
-    let separator = defaultseparator;
-    //because the % operator is REMAINDER not MODULO
-    const mod = (n, d) => {
-      return ((n % d) + d) % d;
-    };
-    let shift = false;
-    document.addEventListener('keydown', (e) => { shift = e.shiftKey; });
-    document.addEventListener('keyup', (e) => { shift = e.shiftKey; });
-    const chosen = {
-      animal: "",
-      gender: "",
-      part: ""
-    };
-    const sanitize = (str) => {
-      return str.replaceAll(/\s+/g, separator);
-    };
-    const setusername = () => {
-      animalspan.innerText = sanitize(chosen.animal);
-      genderspan.innerText = sanitize(chosen.gender);
-      partspan.innerText = sanitize(chosen.part);
-    };
-    const changeSeparator = (n) => {
-      const custom = typeof n === "string";
-      const index = separators.indexOf(separators.find(item => item.char === (custom ? n : separator)));
-      const dir = custom ? 0 : shift ? -1 : 1;
-      const newseparator = separators[mod(index+dir, separators.length)];
-      localStorage.setItem("separator", newseparator.char);
-      separatorbutton.innerHTML = `<div>${newseparator.name}</div>`;
-      separator = newseparator.char;
-      document.querySelectorAll(`.separator`).forEach(e => e.innerText = separator);
-      setusername();
-    };
-    changeSeparator(localStorage.getItem("separator") ?? defaultseparator);
-    let separatecomponents = !!localStorage.getItem("separateComponents")==="true" ?? true;
-    const changeSeparateComponents = (n) => {
-      separatecomponents = n ?? separatecomponentsbutton.innerText !== "Yes";
-      if (separatecomponents) {
-        separatecomponentsbutton.innerHTML = `<div>Yes</div>`;
-        localStorage.setItem("separateComponents", true);
-      } else {
-        separatecomponentsbutton.innerHTML = `<div>No</div>`;
-        localStorage.setItem("separateComponents", false);
-      }
-      separatorspans.forEach(e => {
-        if (separatecomponents)
-          e.style.display = "inline-block";
-        else
-          e.style.display = "none";
-      });
-    };
-    changeSeparateComponents(localStorage.getItem("separateComponents")==="true" ?? true);
-    const initsanitize = (arr) => {
-      return Array.from(arr)
-        //.filter(item => !item.match(/\s|\-/g))
-        //.map(item => !item.match(/\s|\-/g))
-        .map(item => item
-          .toLowerCase()
-          //.replaceAll(/\s+/g, separator)
-          .replaceAll(/[^\w\s]/g, "")
-        );
-    };
-    const animals = initsanitize(animalList);
-    const genders = initsanitize(genderList);
-    const parts = initsanitize([...partList, ...boneList]);
-    const random = (arr) => {
-      return arr[Math.floor(Math.random()*arr.length)];
-    };
-    let unhidden = false;
-    const hideAndPos = () => {
-      unhidden = true;
-      username.style.visibility = "visible";
-      button.disabled = true;
-      const elements = [animalspan, genderspan, partspan, atspan, ...separatorspans];
-      elements.forEach(e => {
-        e.classList.add("slide");
-        e.style.opacity = 1;
-      });
-      setTimeout(() => {
-        button.disabled = false;
-      }, 1250);
-    };
-    const spin = () => {
-      if (!unhidden)
-        hideAndPos();
-      chosen.animal = random(animals);
-      chosen.gender = random(genders);
-      chosen.part = random(parts);
-      setusername();
-    };
-  </script>
 </body>
 </html>
