--- a/tests/animal-gender-bodypart/index.html
+++ b/tests/animal-gender-bodypart/index.html
@@ -19,6 +19,10 @@
       <label for="separatecomponents-button">Separate Components?</label>
       <button id="separatecomponents-button" onclick="changeSeparateComponents()"><div>Yes</div></button>
     </div>
+    <div id="genitalbodypartcontainer">
+      <label for="genitalbodypart-button">Genital Bodypart?</label>
+      <button id="genitalbodypart-button" onclick="changeGenitalBodypart()"><div>No</div></button>
+    </div>
   </div>
   <div id="footer">
     inspired by <a href="https://cohost.org/bethposting/post/6065965-cohost-users-who-cam" target="_blank">this</a> chost
@@ -27,7 +31,7 @@
     <br>
     tag <a class="tag" href="https://cohost.org/rc/tagged/animal%20gender%20bodypart" target="_blank">#animal gender bodypart</a> when sharing!
     <br>
-    <a href="https://github.com/SpiritAxolotl/spax.zone/blob/main/tests/animal-gender-bodypart/">v1.6.1</a>
+    <a href="https://github.com/SpiritAxolotl/spax.zone/blob/main/tests/animal-gender-bodypart/">v1.7</a>
   </div>
 </body>
 </html>
