--- a/tests/animal-gender-bodypart/index.html
+++ b/tests/animal-gender-bodypart/index.html
@@ -10,6 +10,7 @@
   <h1 id="title">Tumblr-to-Cohost Username Generator</h1>
   <button id="spin-button" onclick="spin()"><div>Spin!</div></button>
   <div id="username"><span id="at">@</span><span id="animal"></span><span class="separator"></span><span id="gender"></span><span class="separator"></span><span id="bodypart"></span></div>
+  <button id="copy-button" disabled><div>Copy</div></button>
   <div id="optionscontainer">
     <div id="separatorcontainer">
       <label for="separator-button">Separating Character</label>
@@ -31,7 +32,7 @@
     <br>
     tag <a class="tag" href="https://cohost.org/rc/tagged/animal%20gender%20bodypart" target="_blank">#animal gender bodypart</a> when sharing!
     <br>
-    <a href="https://github.com/SpiritAxolotl/spax.zone/blob/main/tests/animal-gender-bodypart/">v1.7</a>
+    <a href="https://github.com/SpiritAxolotl/spax.zone/blob/main/tests/animal-gender-bodypart/">v1.8</a>
   </div>
 </body>
 </html>
