--- a/html/sitelist.html
+++ b/html/sitelist.html
@@ -12,8 +12,8 @@
     <meta property="og:description" content="A place that links every public page currently on my website!">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://spax.zone/images/faces/spax/Smirk.png">
-    <link rel="icon" href="/images/icons/Smirk_Circle.png"></link>
-    <link rel="stylesheet" href="/css/experimental.css" type=text/css>
+    <link rel="icon" href="/images/icons/Smirk_Circle.png"/>
+    <link rel="stylesheet" href="/css/experimental.css" type="text/css"/>
     <link rel="canonical" href="https://spax.zone/html/sitelist"/>
   </head>
   <body>
@@ -32,56 +32,64 @@
     </article>
     <br>
     <article>
-      <a href=main>Main Page</a><br>
+      <a href="./main">Main Page</a><br>
       The main page to the website. Right now it's a test placeholder but I'll put useful stuff on here eventually.
     </article>
-    <!-- commenting since it is severely outdated
+    <!-- commenting out since it is severely outdated. you can check it out if you've inspected the page lol
     <article>
-      <a href=fanart>Character Art!</a><br>
+      <a href="./fanart">Character Art!</a><br>
       This is where I post all art of my characters! Please check out the cool artists who made them!<br>Sidenote: this page needs to get overhauled. It is severely out of date.
     </article>
-  -->
+    -->
     <article>
-      <a href=nahua-ref-sheet>Nahua Ref Sheet</a><br>
+      <a href="./nahua-ref-sheet">Nahua Ref Sheet</a><br>
       The ref sheet of Nahua! Since I don't have an official ref sheet yet, I've picked a few of the most up-to-date pieces of her to display here.
     </article>
     <article>
-      <a href=isspaxatschool>Is Spax At School?</a><br>
+      <a href="./isspaxatschool">Is Spax At School?</a><br>
       This page uses JavaScript to see my schedule and update the text box to state whether I'm currently at school or not. Finally works!
     </article>
-    <!--
+    <!-- commenting out because, go figure, it's severely out of date LMAO
     <article>
-      <a href=changelog>Changelog</a><br>
+      <a href="./changelog">Changelog</a><br>
       The manually edited changelog for the site. Currently being updated every day I make major changes on the site so that I don't regret not documenting it in the future. (I really need to update this.)
     </article>
     -->
     <article>
-      <a href=alldepfaces>All DEP Character Faces</a><br>
+      <a href="./alldepfaces">All DEP Character Faces</a><br>
       All Dweller's Empty Path faces that are supported on this site! Excluding custom ones.
     </article>
     <article>
-      <a href=allspaxfaces>All Spax Faces</a><br>
+      <a href="./allspaxfaces">All Spax Faces</a><br>
       When originally making this site and testing the text box functionality, I went a little too far with a gag and ended up making 14 sprites for my axolotl character. I only ended up using two of them but in this site, you can see all the expressions I made for them! (I spent like two hours on them) <s>(dm me on discord if you wanna redo them for me)</s><br>
       2024 update: these are being redone by <a href="https://ko-fi.com/ouchyzapgun">ouchyzapgun</a>!
     </article>
     <!--
     <article>
-      <a href=plannedchanges>Planned Changes</a><br>
+      <a href="./plannedchanges">Planned Changes</a><br>
       Here I'll try to do weekly updates stating what I want to change about this site. Just to get my ideas down and so viewers can see them. But yea enjoy my emotional rants here. (I really need to update this too.)
     </article>
     <article>
-      <a href=MojoArrowAdvice>Mojo's Arrow Advice</a><br>
-      This is my Create project that I made for my AP Computer Science Principles class! This program is not endorsed by BrotherMojo at all by the way. 
+      <a href="./MojoArrowAdvice">Mojo's Arrow Advice</a><br>
+      This is my Create project that I made for my AP Computer Science Principles class! This program is not endorsed by BrotherMojo at all by the way.
     </article>
     -->
     <article>
-      <a href=../tests/horse>The Horse Button™</a><br>
+      <a href="../tests/horse">The Horse Button™</a><br>
       The Horse Button™ takes you to a random registered .horse domain.<br>
       THE LIST IS NOT FILTERED FOR DANGEROUS CONTENT. CLICK AT YOUR OWN RISK.<br>
       Originally made in about an hour.
     </article>
     <article>
-      <a href=sitelist>Site List</a><br>
+      <a href="../tests/ooo">.ooo explorer</a><br>
+      Explore all sites that have "o" as the only character in the url! Sorry if this one doesn't stay up-to-date.
+    </article>
+    <article>
+      <a href="../tests/animal-gender-bodypart/">Animal Gender Bodypart</a><br>
+      A fun username generator based on <a href="https://cohost.org/bethposting/post/6065965-cohost-users-who-cam">this</a> chost.
+    </article>
+    <article>
+      <a href="./sitelist">Site List</a><br>
       This page right here! Déjà vu much?
     </article>
   </body>
