--- a/tests/animal-gender-bodypart/index.html
+++ b/tests/animal-gender-bodypart/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Tumblr-to-Cohost Username Generator</title>
+  <title>Animal Gender Bodypart</title>
   <link rel="icon" href="./icon.png">
   <link rel="stylesheet" href="./styles.css" type=text/css>
   <script src="./agbplist.js"></script>
   <script src="./script.js" defer></script>
 </head>
 <body>
-  <h1 id="title">Tumblr-to-Cohost Username Generator</h1>
+  <h1 id="title">Animal Gender Bodypart</h1>
   <button id="spin-button" onclick="spin()"><div>Spin!</div></button>
   <div id="username"><span id="at">@</span><span id="animal"></span><span class="separator"></span><span id="gender"></span><span class="separator"></span><span id="bodypart"></span></div>
   <button id="copy-button" disabled><div>Copy</div></button>
@@ -33,7 +33,7 @@
     <br>
     tag <a class="tag" href="https://cohost.org/rc/tagged/animal%20gender%20bodypart" target="_blank">#animal gender bodypart</a> when sharing!
     <br>
-    <a href="https://github.com/SpiritAxolotl/spax.zone/blob/main/tests/animal-gender-bodypart/">v1.8.8</a>
+    <a href="https://github.com/SpiritAxolotl/spax.zone/blob/main/tests/animal-gender-bodypart/">v1.8.8a</a>
   </div>
 </body>
 </html>
