fuck it. no more embedding

--- a/html/nahua-ref-sheet.html
+++ b/html/nahua-ref-sheet.html
@@ -6,14 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="theme-color" content="#306850">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Nahua's ref sheet!">
+    <!--<meta name="description" content="Nahua's ref sheet!">
     <meta property="og:title" content="Nahua Ref Sheet">
     <meta property="og:description" content="Nahua's ref sheet!">
+    <meta property="og:image" content="https://spax.zone/images/faces/spax/Smirk.png" type="image/png">-->
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://spax.zone/images/faces/spax/Smirk.png" type="image/png">
-    <link rel="icon" href="/images/icons/Smirk_Circle.png"></link>
+    <link rel="icon" href="/images/icons/Smirk_Circle.png">
     <link rel="stylesheet" href="/css/experimental.css" type=text/css>
-    <link rel="canonical" href="https://spax.zone/html/nahua-ref-sheet"/>
+    <link rel="canonical" href="https://spax.zone/html/nahua-ref-sheet">
     <style>
       #colors {
         margin-top: 10px;
