minor css tweaks (thanks cef and marbel)

--- a/html/nahua-ref-sheet.html
+++ b/html/nahua-ref-sheet.html
@@ -16,18 +16,16 @@
     <link rel="canonical" href="https://spax.zone/html/nahua-ref-sheet">
     <style>
       #colors {
-        margin-top: 10px;
         display: flex;
         flex-direction: column;
+        margin-top: 10px;
         gap: 10px;
         & > div {
-          display: flex;
-          justify-content: center;
-          flex-direction: row;
-          gap: 10px;
+          display: inherit;
+          gap: inherit;
           & > div {
-            width: 100px;
-            height: 100px;
+            width: 100%;
+            aspect-ratio: 1 / 1;
             cursor: pointer;
           }
         }
@@ -42,7 +40,7 @@
   <body>
     <article type="art" id="ref">
       !! Scroll down for clarifications !!
-      <img src="/images/art/nahua-bananas-refsheet.png">
+      <img src="/images/art/nahua-bananas-refsheet.png" alt="A ref sheet of my character Nahua.">
       Artist: 1LikeBananas
     </article>
     <article>
